--- a/src/chapter2.adoc
+++ b/src/chapter2.adoc
@@ -1,47 +1,110 @@
 [[chapter2]]
-== The Second Chapter
+== Arithmetic Instructions
 
-. The first item.
+=== BCD Add
 
-. The second item.
-+
-.. The first sub item.
+Synopsis::
+Computes the BCD sum of the values in registers _rs1_ and _rs2_ and places the result in register _rd_.
 
-.. The second sub item.
-+
-[CAUTION]
+Mnemonic::
 ====
-A moment of caution is required for this block of text must be read and apreciated for its importance.
+addbcd _rd_, _rs1_, _rs2_
+
+addbcdw _rd_, _rs1_, _rs2_
+
 ====
+Encoding::
+TBD, somewhere in OP/OP64
 
-. Yet another item.
+Description::
 
-. Again, an item.
+Computes the BCD sum of the values in registers _rs1_ and _rs2_ and places the result in register _rd_.
+If either source operand is invalid, or the sum overflows, the canonical invalid BCD value (0x0) is placed in register _rd_.
+The word-sized version is RV64 only.
 
-.. A multi-line item.
-+
-This item has multiple lines.
-+
-By multiple lines, this is what we mean.
-+
-Seriously, multiple.
+SAIL code::
+[source,sail]
+--
+TODO
+--
 
-=== An example table
+=== BCD Subtract
 
-[cols="^1,^1,^1,^1,^3,^3",stripes=even,options="header"]
-|===
-4+|Letters _and_ bits {set:cellbgcolor:green} 2+|A much longer area
-|L|R|W|X|Quarter 1|Quarter 2
-|{set:cellbgcolor:!} 0|0|0|0 2+|Rows alternate colors
-|0|0|0|1|Thing 1|Thing 2
-|1|0|0|0|Thing 3|Thing 4
-|1|1|1|1 2+|Span Thing 1 and 2
-|===
+Synopsis::
+Computes the BCD difference of the values in registers _rs1_ and _rs2_ and places the result in register _rd_.
 
-=== Sub section
+Mnemonic::
+====
+subbcd _rd_, _rs1_, _rs2_
 
-Diam donec adipiscing tristique risus indexterm:[risus]. Nisl rhoncus mattis rhoncus urna. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate. Porta non pulvinar neque laoreet suspendisse interdum consectetur libero id. Massa vitae tortor condimentum lacinia quis vel. Donec ac odio tempor orci. Mi sit amet mauris commodo quis imperdiet massa tincidunt. Quis enim lobortis scelerisque fermentum dui. Lacus viverra vitae congue eu. Sed faucibus turpis in eu mi bibendum neque. Sit amet porttitor eget dolor. Aliquet eget sit amet tellus cras adipiscing enim. Id cursus metus aliquam eleifend mi. Vestibulum lorem sed risus ultricies tristique nulla aliquet.
+subbcdw _rd_, _rs1_, _rs2_
 
-=== Yet another subsection
+====
+Encoding::
+TBD, somewhere in OP/OP64
 
-Quam lacus suspendisse faucibus interdum posuere lorem ipsum. Nulla aliquet enim tortor at auctor urna nunc id cursus. Massa massa ultricies mi quis hendrerit dolor magna. Integer enim neque volutpat ac tincidunt. Dolor magna eget est lorem ipsum dolor. Urna neque viverra justo nec. Neque gravida in fermentum et. Fringilla ut morbi tincidunt augue interdum velit euismod. Dolor sit amet consectetur adipiscing elit. Eu facilisis sed odio morbi. In cursus turpis massa tincidunt dui. Orci indexterm:[orci] phasellus egestas tellus rutrum tellus. Semper eget duis at tellus at urna condimentum. Orci porta non pulvinar neque laoreet suspendisse interdum consectetur.
+Description::
+
+Computes the BCD difference of the values in registers _rs1_ and _rs2_ and places the result in register _rd_.
+If either source operand is invalid, or the difference overflows, the canonical invalid BCD value (0x0) is placed in register _rd_.
+The word-sized version is RV64 only.
+
+SAIL code::
+[source,sail]
+--
+TODO
+--
+
+=== BCD Multiply
+
+Synopsis::
+Computes the BCD product of the values in registers _rs1_ and _rs2_ and places the result in register _rd_.
+
+Mnemonic::
+====
+mulbcd _rd_, _rs1_, _rs2_
+
+mulbcdw _rd_, _rs1_, _rs2_
+
+====
+Encoding::
+TBD, somewhere in OP/OP64
+
+Description::
+
+Computes the BCD product of the values in registers _rs1_ and _rs2_ and places the result in register _rd_.
+If either source operand is invalid, or the product overflows, the canonical invalid BCD value (0x0) is placed in register _rd_.
+The word-sized version is RV64 only.
+
+SAIL code::
+[source,sail]
+--
+TODO
+--
+
+=== BCD Divide
+
+Synopsis::
+Computes the BCD sum of the values in registers _rs1_ and _rs2_ and places the result in register _rd_.
+
+Mnemonic::
+====
+addbcd _rd_, _rs1_, _rs2_
+
+addbcdw _rd_, _rs1_, _rs2_
+
+====
+Encoding::
+TBD, somewhere in OP/OP64
+
+Description::
+
+Computes the BCD sum of the values in registers _rs1_ and _rs2_ and places the result in register _rd_.
+If either source operand is invalid, or the sum overflows, the canonical invalid BCD value (0x0) is placed in register _rd_.
+The word-sized version is RV64 only.
+
+SAIL code::
+[source,sail]
+--
+TODO
+--
